kubernetes/apps/networking/static-routes/app/brother-printer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app printer
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName

  ports:
    - name: http
      port: 80
  externalName: printer.${INTERNAL_DOMAIN}
