kubernetes/apps/networking/static-routes/app/brother-printer/ingress.yaml
---


# yaml-language-server: $schema=https://kubernetes-schemas.trux.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app printer
  namespace: network-system
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "monitor-share"
    hajimari.io/appName: "printer"
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: "internal-nginx"
  rules:
    - host: &host "printer.${EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  name: http
  tls:
    - hosts:
        - *host
